// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Function > function > Should generate a function 1`] = `
"const withBaseURL = (baseUrl: string) => {};
"
`;

exports[`Function > invokeFunction > Should generate an invokeFunction 1`] = `
"withBaseURL("https://api.example.com");
"
`;

exports[`Invocation > function > Should generate a function 1`] = `
"const withBaseURL = (baseUrl: string) => {};
"
`;

exports[`Invocation > function with a body > Should generate a function with a body 1`] = `
"const withBaseURL = (baseUrl: string): string => {
    console.log("foo");
    return baseUrl + "foo";
};
"
`;

exports[`Invocation > function with a comment > Should generate a function with a body 1`] = `
"/**
 * This is a comment
 */
const withBaseURL = (baseUrl: string): string => {
    console.log("foo");
    return baseUrl + "foo";
};
"
`;

exports[`Invocation > function with return type > Should generate a function with a return type 1`] = `
"const withBaseURL = (baseUrl: string, foo: string): string => {};
"
`;

exports[`Invocation > invokeFunction > Should generate an invokeFunction 1`] = `
"withBaseURL("https://api.example.com");
"
`;
